# FastGPT

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
.claude/design/: ai-workflow-generator.md
deploy/docker/: .env.example.ai-workflow  README.ai-workflow.md  ai-workflow-generator.yml  docker-compose.ai-workflow.yml
docs/: ai-workflow-generator.md  developer-guide.md
docs/plans/: 2026-02-22-ai-workflow-generator.md  2026-02-23-ai-workflow-generator-complete-design.md  2026-02-23-ai-workflow-generator-phase1-plan.md  2026-02-24-ai-workflow-generator-design.md  2026-02-24-ai-workflow-implementation-plan.md  2026-02-24-component-discovery-plugin-generation-system.md
projects/app/: .env.template  AGENTS.md  skills-lock.json  vitest.config.ts
projects/app/test/: chat.test.ts  (+4 more)
projects/opencode-agent/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
projects/opencode-agent/src/: __init__.py
projects/opencode-agent/src/agent/: core.py  error_handler.py  intent_analyzer.py  rag_knowledge_base.py  state_machine.py  validation_engine.py  variable_mapper.py  workflow_generator.py
projects/opencode-agent/src/api/: routes.py
projects/opencode-agent/src/services/: __init__.py  component_registry.py  fastgpt_plugin_api.py  plugin_code_generator.py  plugin_manager.py  workflow_builder.py
projects/opencode-agent/src/tools/: fastgpt.py  queue.py  storage.py
projects/opencode-agent/tests/: test_complexity_analyzer.py  test_intent_analyzer.py  test_workflow_generator.py
projects/plugin-runtime/: Dockerfile  package.json
projects/sandbox/: package.json
(+69 files in other folders)
