[project]
name = "fastgpt-opencode-agent"
version = "0.1.0"
description = "FastGPT Workflow Generator Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "minio>=7.0.0",
    "motor>=3.0.0",
    "redis>=5.0.0",
]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
